--- a/l10n.yaml
+++ b/l10n.yaml
@@ -1,6 +1,6 @@
 arb-dir: lib/l10n
-template-arb-file: intl_en.arb
+template-arb-file: intl_vie.arb
 output-localization-file: messages.dart
 output-class: S
-preferred-supported-locales: [ en ]
+preferred-supported-locales: [ vi ]
 nullable-getter: false
